# Learning_programing

./: .gitignore  .pre-commit-config.yaml
Othello_game/: .gitignore  pyproject.toml
Othello_game/docs/Document/: architecture.md  vite_django_integration.md
Othello_game/docs/issues/: issues.md
Othello_game/docs/prompts/: DBtestcode_prmt.md  othello_env_prmt.md  othello_env_test_prmt.md  service_prmt.md  service_prmt2.md
Othello_game/docs/requirements/: 01_Concept_Architecture.md  02_Contracts_DataModels.md  03_Directory_Structure.md  04_Database_Design.md
Othello_game/othello_app/config/: settings.py  urls.py
Othello_game/othello_app/frontend/: package-lock.json  package.json  vite.config.js
Othello_game/othello_app/frontend/src/: api.js  main.js  style.css
Othello_game/othello_app/model/: Agent.py  dqn_model.py  othello_env.py
Othello_game/othello_app/othello_web/: apps.py  models.py  services.py  urls.py  views.py
Othello_game/othello_app/othello_web/migrations/: 0001_initial.py
Othello_game/othello_app/othello_web/templates/: base.html
Othello_game/othello_app/tests/: test_Agent.py  test_dqn_model.py  test_models.py  test_othello_env.py  test_services.py  test_views.py
Othello_learning/othello_app/: .gitignore  pyproject.toml  pytest.ini
Othello_learning/othello_app/config/: settings.py  urls.py
Othello_learning/othello_app/othello_web/: urls.py  views.py
Othello_learning/othello_app/othello_web/game/: ai.py  engine.py  model.py
Othello_learning/othello_app/othello_web/static/js/: game.js
Othello_learning/othello_app/othello_web/templates/othello_web/: index.html
Othello_learning/othello_app/othello_web/tests/: .coverage  coverage.json  test_ai.py  test_engine.py  test_views.py
