[project]
name = "othello-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django==5.2",
    "numpy==2.3.5",
    "pytest==9.0.2",
    "pytest-cov>=7.1.0",
    "pytest-django==4.11.1",
    "python-dotenv>=1.2.2",
    "torch==2.9.1",
]
